--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 branches:
   only:
     - master
-
-# command to run tests
-script: nosetests
+install:
+  - pip install coverage
+script:
+  - nosetests -v --with-coverage --cover-tests
