Added new unit tests and fixed properties on CombatStats so they have an instance scope

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ branches:
 install:
   - pip install coverage
 script:
-  - nosetests -v --with-coverage --cover-tests
+  - nosetests -v --with-coverage
