--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ branches:
 install:
 - pip install coverage
 script:
-- nosetests -v --with-coverage
+- nosetests -v --with-coverage --cover-html
 after_success:
 - ./update-gh-pages.sh
 env:
