--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ branches:
   only:
   - master
 install:
-- pip install coverage
+- pip install -r requirements.txt
 script:
 - nosetests -v --with-coverage --cover-html
 after_success:
