--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-coverage
+coverage==3.7.1
+Flask==0.10.1
+gunicorn==19.3.0
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+nose==1.3.7
+Werkzeug==0.10.4
+wheel==0.24.0
