--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,13 @@ celery==3.1.17
 coverage==3.7.1
 Flask==0.10.1
 gunicorn==19.3.0
+hiredis==0.2.0
 itsdangerous==0.24
 Jinja2==2.8
 kombu==3.0.28
 MarkupSafe==0.23
 nose==1.3.7
-numpy==1.10.1
-pandas==0.17.0
 python-dateutil==2.4.2
-pytz==2015.6
 redis==2.10.3
 six==1.10.0
 virtualenv==13.1.2
