--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
 amqp==1.4.7
 anyjson==0.3.3
-billiard==3.3.0.20
-celery==3.1.17
-coverage==3.7.1
+billiard==3.3.0.21
+celery==3.1.19
+coverage==4.0.2
 Flask==0.10.1
 gunicorn==19.3.0
 hiredis==0.2.0
 itsdangerous==0.24
 Jinja2==2.8
-kombu==3.0.28
+kombu==3.0.29
 MarkupSafe==0.23
 nose==1.3.7
 python-dateutil==2.4.2
-redis==2.10.3
+pytz==2015.7
+redis==2.10.5
 six==1.10.0
 virtualenv==13.1.2
-Werkzeug==0.10.4
-wheel==0.24.0
+Werkzeug==0.11
+wheel==0.26.0
