--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyjson==0.3.3
 billiard==3.3.0.21
 celery==3.1.19
 coverage==4.0.2
+elasticsearch==1.9.0
 Flask==0.10.1
 gunicorn==19.3.0
 hiredis==0.2.0
@@ -15,6 +16,7 @@ python-dateutil==2.4.2
 pytz==2015.7
 redis==2.10.5
 six==1.10.0
+urllib3==1.12
 virtualenv==13.1.2
 Werkzeug==0.11
 wheel==0.26.0
