--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ amqp==1.4.7
 anyjson==0.3.3
 billiard==3.3.0.21
 celery==3.1.19
-coverage==4.0.2
+coverage==4.0.3
 elasticsearch==2.1.0
 Flask==0.10.1
-gunicorn==19.3.0
+gunicorn==19.4.1
 hiredis==0.2.0
 itsdangerous==0.24
 Jinja2==2.8
@@ -16,6 +16,7 @@ python-dateutil==2.4.2
 pytz==2015.7
 redis==2.10.5
 six==1.10.0
+SQLAlchemy==1.0.9
 urllib3==1.12
 virtualenv==13.1.2
 Werkzeug==0.11.2
